--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="app-container">
         <!-- Header -->
         <header>
-            <h1><b>Taskee: To-Do List App</b></h1>
+            <h1><b>Taskee: <i>To-Do List App</i></b></h1>
             <div class="mode-toggle" id="mode-toggle" onclick="toggleMode()">
                 <span id="mode-icon">🌄</span>
             </div>
